# adapto-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/adapto/: Cargo.toml  README.md
crates/adapto/src/: lib.rs
crates/adapto_ai/: Cargo.toml  README.md
crates/adapto_ai/src/: action.rs  budget.rs  cache.rs  client.rs  error.rs  lib.rs  model.rs  pii.rs  prompt.rs  trace.rs
crates/adapto_ai/tests/: ai_tests.rs
crates/adapto_app/: Cargo.toml  README.md
crates/adapto_app/src/: handler.rs  layout.rs  lib.rs  live.js  views.rs
crates/adapto_app/tests/: app_tests.rs
crates/adapto_audit/: Cargo.toml  README.md
crates/adapto_audit/src/: error.rs  event.rs  filter.rs  lib.rs  redact.rs  sink.rs
crates/adapto_audit/tests/: audit_tests.rs
crates/adapto_auth/: Cargo.toml  README.md
crates/adapto_auth/src/: csrf.rs  error.rs  jwt.rs  lib.rs  middleware.rs  password.rs  rate_limit.rs  rbac.rs  session_store.rs  session_token.rs
crates/adapto_auth/tests/: auth_tests.rs
crates/adapto_cli/: Cargo.toml  README.md
crates/adapto_cli/src/: commands.rs  error.rs  main.rs
crates/adapto_cli/tests/: cli_tests.rs
crates/adapto_client_protocol/: Cargo.toml  README.md
crates/adapto_client_protocol/js/: README.md  adapto-client.js  adapto-client.min.js
crates/adapto_client_protocol/src/: error.rs  event.rs  lib.rs  message.rs  patch.rs  session.rs
crates/adapto_client_protocol/tests/: js_protocol_compat_test.rs  protocol_tests.rs
crates/adapto_compiler/: Cargo.toml  README.md
crates/adapto_compiler/benches/: benchmark.rs
crates/adapto_compiler/src/: codegen.rs  compiler.rs  dependency.rs  error.rs  ir.rs  lib.rs  manifest.rs
crates/adapto_compiler/tests/: compiler_tests.rs
crates/adapto_db/: Cargo.toml  README.md
crates/adapto_db/src/: error.rs  lib.rs  migration.rs  pool.rs  query.rs  repository.rs  runner.rs  sql.rs
crates/adapto_db/tests/: db_tests.rs
crates/adapto_forms/: Cargo.toml  README.md
crates/adapto_forms/src/: error.rs  lib.rs  rules.rs  sanitize.rs  schema.rs  validation.rs
crates/adapto_forms/tests/: form_tests.rs
crates/adapto_live/: Cargo.toml  README.md
crates/adapto_live/src/: error.rs  event.rs  handler.rs  lib.rs  manager.rs  patch.rs  session.rs
crates/adapto_live/tests/: live_tests.rs
crates/adapto_macros/: Cargo.toml  README.md
crates/adapto_macros/src/: lib.rs  resource.rs
crates/adapto_macros/tests/: macro_tests.rs
crates/adapto_parser/: Cargo.toml  README.md
crates/adapto_parser/benches/: benchmark.rs
crates/adapto_parser/src/: ast.rs  error.rs  grammar.pest  lib.rs  parser.rs
crates/adapto_parser/tests/: parse_tests.rs
crates/adapto_parser/tests/snapshots/: parse_tests__snapshot_counter_ast.snap  parse_tests__snapshot_resource_block.snap
crates/adapto_runtime/: Cargo.toml  README.md
crates/adapto_runtime/src/: config.rs  context.rs  error.rs  interpreter.rs  lib.rs  resource.rs  state.rs  types.rs
crates/adapto_runtime/tests/: runtime_tests.rs
crates/adapto_ssr/: Cargo.toml  README.md
crates/adapto_ssr/benches/: benchmark.rs
crates/adapto_ssr/src/: error.rs  layout.rs  lib.rs  page.rs  project.rs  renderer.rs  router.rs  server.rs
crates/adapto_ssr/static/: adapto-client.js
crates/adapto_ssr/tests/: server_tests.rs  ssr_tests.rs
crates/adapto_store/: Cargo.toml  README.md
crates/adapto_store/benches/: benchmark.rs
crates/adapto_store/examples/: persistence_demo.rs
crates/adapto_store/src/: collection.rs  cursor.rs  disk_collection.rs  document.rs  engine.rs  error.rs  index.rs  lib.rs  query.rs  slug.rs  tenant.rs  wal.rs
crates/adapto_store/tests/: disk_collection_test.rs  store_tests.rs
crates/adapto_test_utils/: Cargo.toml  README.md
crates/adapto_test_utils/src/: assertions.rs  builders.rs  fixtures.rs  http.rs  lib.rs  mock.rs  snapshot.rs  store.rs
crates/adapto_test_utils/tests/: test_utils_tests.rs
crates/adapto_ui/: Cargo.toml  README.md
crates/adapto_ui/css/: adapto-ui.css
crates/adapto_ui/css/base/: reset.css  tokens.css  typography.css
crates/adapto_ui/css/components/: alert.css  avatar.css  badge.css  breadcrumb.css  button.css  card.css  dropdown.css  form-group.css  input.css  modal.css  nav.css  progress.css  table.css  toggle.css  tooltip.css
crates/adapto_ui/css/utilities/: layout.css  spacing.css  visibility.css
crates/adapto_ui/src/: components.rs  lib.rs
crates/adapto_ui/tests/: ui_tests.rs
examples/counter/: Cargo.toml
examples/counter/app/: page.adapto
examples/counter/src/: main.rs  server.rs
examples/counter/tests/: counter_test.rs
examples/customer_crm/: Cargo.toml
examples/customer_crm/app/: page.adapto
examples/customer_crm/resources/: Customer.adapto
examples/customer_crm/src/: main.rs  server.rs
examples/customer_crm/tests/: crm_test.rs
examples/myqaz/: Cargo.toml
examples/myqaz/prod-html/: browse-education.html  directory-companies.html  homepage.html  law-category.html  law-presidential.html  reference-economic-activity.html
examples/myqaz/src/: data.rs  html.rs  lang.rs  main.rs  types.rs
examples/myqaz/src/routes/: bailiffs.rs  bible.rs  codes.rs  companies.rs  constitution.rs  decrees.rs  drugs.rs  financial.rs  gov_orgs.rs  hadith.rs  laws.rs  measurement.rs  mod.rs  namaz.rs  notaries.rs  payment_codes.rs  phone_codes.rs  postal_codes.rs  quran.rs  shezhire.rs  static_pages.rs  tax_rates.rs  waste_codes.rs
examples/myqaz/static-pages/auto/: index.html
examples/myqaz/static-pages/blocked-sites/: index.html
examples/myqaz/static-pages/browse/abroad/: index.html
examples/myqaz/static-pages/browse/benefits/: index.html
examples/myqaz/static-pages/browse/births-marriages-deaths/: index.html
examples/myqaz/static-pages/christianity/: index.html
examples/myqaz/static-pages/islam/: index.html
examples/myqaz/static-pages/kz/: index.html
examples/myqaz/static-pages/reference/: index.html
examples/school_ai/: Cargo.toml
examples/school_ai/app/lessons/: page.adapto
examples/school_ai/src/: main.rs
examples/school_ai/tests/: school_ai_test.rs
(+65 files in other folders)
