[workspace]
resolver = "2"
members = [
    "crates/adapto_parser",
    "crates/adapto_compiler",
    "crates/adapto_ssr",
    "crates/adapto_live",
    "crates/adapto_client_protocol",
    "crates/adapto_cli",
    "crates/adapto_runtime",
    "crates/adapto_forms",
    "crates/adapto_auth",
    "crates/adapto_audit",
    "crates/adapto_ai",
    "crates/adapto_db",
    "crates/adapto_store",
    "crates/adapto_test_utils",
    "crates/adapto_ui",
    "examples/counter",
    "examples/customer_crm",
    "examples/school_ai",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP / WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Parsing
pest = "2.7"
pest_derive = "2.7"
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
# Validation
garde = { version = "0.18", features = ["derive"] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Config
figment = { version = "0.10", features = ["toml", "env"] }
# CLI
clap = { version = "4", features = ["derive"] }
# Crypto / Security
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
# IDs
uuid = { version = "1", features = ["v4", "serde"] }
# Time
chrono = { version = "0.4", features = ["serde"] }
# Error handling
thiserror = "1"
anyhow = "1"
# Testing
insta = { version = "1", features = ["yaml"] }
tokio-test = "0.4"
