[package]
name = "adapto"
description = "Adapto — full-stack Rust web framework for data-driven apps"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["app", "ui", "forms", "auth", "audit", "macros", "live"]
full = ["default", "ai", "db", "parser"]
app = ["dep:adapto_app"]
ui = ["dep:adapto_ui"]
forms = ["dep:adapto_forms"]
auth = ["dep:adapto_auth"]
audit = ["dep:adapto_audit"]
macros = ["dep:adapto_macros"]
live = ["dep:adapto_live", "dep:adapto_ssr", "dep:adapto_runtime", "dep:adapto_client_protocol"]
ai = ["dep:adapto_ai"]
db = ["dep:adapto_db"]
parser = ["dep:adapto_parser", "dep:adapto_compiler"]

[dependencies]
adapto_store = { path = "../adapto_store", version = "0.2.4" }
adapto_app = { path = "../adapto_app", version = "0.2.4", optional = true }
adapto_ui = { path = "../adapto_ui", version = "0.2.4", optional = true }
adapto_forms = { path = "../adapto_forms", version = "0.2.4", optional = true }
adapto_client_protocol = { path = "../adapto_client_protocol", version = "0.2.4", optional = true }
adapto_ssr = { path = "../adapto_ssr", version = "0.2.4", optional = true }
adapto_live = { path = "../adapto_live", version = "0.2.4", optional = true }
adapto_runtime = { path = "../adapto_runtime", version = "0.2.4", optional = true }
adapto_auth = { path = "../adapto_auth", version = "0.2.4", optional = true }
adapto_audit = { path = "../adapto_audit", version = "0.2.4", optional = true }
adapto_macros = { path = "../adapto_macros", version = "0.2.4", optional = true }
adapto_ai = { path = "../adapto_ai", version = "0.2.4", optional = true }
adapto_db = { path = "../adapto_db", version = "0.2.4", optional = true }
adapto_parser = { path = "../adapto_parser", version = "0.2.4", optional = true }
adapto_compiler = { path = "../adapto_compiler", version = "0.2.4", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
