[package]
name = "adapto_ai"
version.workspace = true
edition.workspace = true

[dependencies]
adapto_runtime = { path = "../adapto_runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
regex-lite = "0.1"

[dev-dependencies]
insta = { workspace = true }
tokio-test = "0.4"
