[package]
name = "adapto_ai"
description = "Adapto AI integration — PII redaction, budget tracking, model routing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
adapto_runtime = { path = "../adapto_runtime", version = "0.2.4" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
regex-lite = "0.1"

[dev-dependencies]
insta = { workspace = true }
tokio-test = "0.4"
