[package]
name = "adapto_app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "App builder for Adapto — declarative routes, async handlers, middleware, static files, WebSocket"
readme = "README.md"

[dependencies]
adapto_store = { path = "../adapto_store", version = "0.2.4" }
adapto_ui = { path = "../adapto_ui", version = "0.2.4" }
adapto_client_protocol = { path = "../adapto_client_protocol", version = "0.2.4" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
