[package]
name = "adapto_auth"
version.workspace = true
edition.workspace = true

[dependencies]
adapto_runtime = { path = "../adapto_runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
