[package]
name = "adapto_auth"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
adapto_runtime = { path = "../adapto_runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
