[package]
name = "adapto_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "adapto"
path = "src/main.rs"

[dependencies]
adapto_parser = { path = "../adapto_parser" }
adapto_compiler = { path = "../adapto_compiler" }
adapto_runtime = { path = "../adapto_runtime" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
