[package]
name = "adapto_cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "adapto"
path = "src/main.rs"

[dependencies]
adapto_parser = { path = "../adapto_parser" }
adapto_compiler = { path = "../adapto_compiler" }
adapto_runtime = { path = "../adapto_runtime" }
adapto_ssr = { path = "../adapto_ssr" }
adapto_store = { path = "../adapto_store" }
adapto_live = { path = "../adapto_live" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
