[package]
name = "adapto_cli"
description = "Adapto CLI — dev server, build, check, generate, project scaffolding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "adapto"
path = "src/main.rs"

[dependencies]
adapto_parser = { path = "../adapto_parser", version = "0.2.5" }
adapto_compiler = { path = "../adapto_compiler", version = "0.2.5" }
adapto_runtime = { path = "../adapto_runtime", version = "0.2.5" }
adapto_ssr = { path = "../adapto_ssr", version = "0.2.5" }
adapto_store = { path = "../adapto_store", version = "0.2.5" }
adapto_live = { path = "../adapto_live", version = "0.2.5" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
