[package]
name = "adapto_db"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
adapto_runtime = { path = "../adapto_runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio-test = "0.4"
