[package]
name = "adapto_db"
description = "Adapto PostgreSQL layer — query builder, repository, migrations"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
adapto_runtime = { path = "../adapto_runtime", version = "0.2.5" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio-test = "0.4"
