[package]
name = "adapto_forms"
description = "Adapto form validation — schema builder, field types, constraints"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
adapto_runtime = { path = "../adapto_runtime", version = "0.2.5" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
