[package]
name = "adapto_live"
description = "Adapto live runtime — session manager, event dispatch, patch generation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
adapto_runtime = { path = "../adapto_runtime", version = "0.2.5" }
adapto_compiler = { path = "../adapto_compiler", version = "0.2.5" }
adapto_client_protocol = { path = "../adapto_client_protocol", version = "0.2.5" }
adapto_auth = { path = "../adapto_auth", version = "0.2.5" }
adapto_audit = { path = "../adapto_audit", version = "0.2.5" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio-test = { workspace = true }
