[package]
name = "adapto_macros"
version.workspace = true
edition.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
adapto_store = { path = "../adapto_store" }
serde = { workspace = true }
serde_json = { workspace = true }
