[package]
name = "adapto_parser"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
