[package]
name = "adapto_runtime"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
adapto_store = { path = "../adapto_store" }

[dev-dependencies]
insta = { workspace = true }
