[package]
name = "adapto_runtime"
description = "Adapto runtime — state store, permissions, interpreter, resource manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
adapto_store = { path = "../adapto_store", version = "0.2.5" }

[dev-dependencies]
insta = { workspace = true }
