[package]
name = "adapto_ssr"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
adapto_parser = { path = "../adapto_parser" }
adapto_compiler = { path = "../adapto_compiler" }
adapto_runtime = { path = "../adapto_runtime" }
adapto_client_protocol = { path = "../adapto_client_protocol" }
adapto_auth = { path = "../adapto_auth" }
adapto_live = { path = "../adapto_live" }
adapto_store = { path = "../adapto_store" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio-test = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
