[package]
name = "adapto_ssr"
description = "Adapto server-side rendering — renderer, router, project loader, HTTP server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
adapto_parser = { path = "../adapto_parser", version = "0.2.5" }
adapto_compiler = { path = "../adapto_compiler", version = "0.2.5" }
adapto_runtime = { path = "../adapto_runtime", version = "0.2.5" }
adapto_client_protocol = { path = "../adapto_client_protocol", version = "0.2.5" }
adapto_auth = { path = "../adapto_auth", version = "0.2.5" }
adapto_live = { path = "../adapto_live", version = "0.2.5" }
adapto_store = { path = "../adapto_store", version = "0.2.5" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio-test = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
