[package]
name = "adapto_ui"
description = "CSS component library and HTML utilities for Adapto"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

[dev-dependencies]
