[package]
name = "example-counter"
version.workspace = true
edition.workspace = true

[[bin]]
name = "counter-server"
path = "src/server.rs"

[dependencies]
adapto_parser = { path = "../../crates/adapto_parser" }
adapto_compiler = { path = "../../crates/adapto_compiler" }
adapto_runtime = { path = "../../crates/adapto_runtime" }
adapto_client_protocol = { path = "../../crates/adapto_client_protocol" }
adapto_ssr = { path = "../../crates/adapto_ssr" }
adapto_live = { path = "../../crates/adapto_live" }
adapto_auth = { path = "../../crates/adapto_auth" }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
