[package]
publish = false
name = "example-customer-crm"
version.workspace = true
edition.workspace = true

[[bin]]
name = "crm-server"
path = "src/server.rs"

[dependencies]
adapto = { path = "../../crates/adapto" }
adapto_app = { path = "../../crates/adapto_app" }
adapto_macros = { path = "../../crates/adapto_macros" }
adapto_store = { path = "../../crates/adapto_store" }
adapto_client_protocol = { path = "../../crates/adapto_client_protocol" }
adapto_ui = { path = "../../crates/adapto_ui" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
